--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,9 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+> Nihao! I'm Zikang Chen, and I am now a Chinese-English translator. I got my master's degree in translation from Guangxi University, where I have systematically learned a lot of translation knowledge, studied a lot of translation theories, and have very solid translation skills. 
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+I have been a translator for many years and have rich experience, especially in subtitle translation. Now I have translated up to 100,000 words of subtitles. The organizations I have worked with include: Coursera, Amara, Ted, Translation Commons, and so on. I have a very good reputation in the translation industry. Recently, I have participated in many volunteer activities for subtitle translation, which makes me love translation even more. Especially subtitle translation. In the process, my translation skills have improved a lot.
+
+It has also opened my eyes to opportunities. I think YouTube is the biggest video sharing platform in the world and certainly has a lot of Chinese viewers. But most of the English videos don't even have subtitles, let alone Chinese subtitles. If you add Chinese subtitles, I believe it will be a big improvement and win more viewers.
+
+Let's start the cooperation!
