--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,9 @@
-# Hi, I'm Your Name
+# Hi, I'm Zikang
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+A translator from China.
+
+My subtitles can be seen on the world’s largest streaming service, and I’ve translated for some of China’s biggest hotel chains and largest websites. 
+
+But there’s more to me than work. I love fitness, dancing and yoga, but traveling is my #1 free-time priority. I dream to travel in the U.S. 
+
+
